force-app/main/default/objects/pse__Time_Date__c/pse__Time_Date__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__TimeDateHelp</customHelpPage>
    <description>Records hours worked on a single date within the date range of a timecard. Timecards have a master-detail relationship with time dates.</description>
    <label>Time Date</label>
    <nameField>
        <displayFormat>TD-{0}</displayFormat>
        <label>Time Date Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>