force-app/main/default/objects/pse__Time_Date__c/fields/Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Bill_Rate__c</fullName>
    <description>Bill rate from timecard record.</description>
    <formula>pse__Timecard__r.pse__Bill_Rate__c</formula>
    <inlineHelpText>Bill rate from timecard record.</inlineHelpText>
    <label>Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>