force-app/main/default/objects/pse__Time_Date__c/fields/Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Billable_Amount__c</fullName>
    <description>Bill Rate (from Timecard) * Hours (from Time Date)</description>
    <formula>Bill_Rate__c * pse__Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Bill Rate (from Timecard) * Hours (from Time Date)</inlineHelpText>
    <label>Billable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>