force-app/main/default/objects/pse__Time_Date__c/fields/pse__Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Date__c</fullName>
    <description>The date for which the parent Timecard contains the specified number of hours.</description>
    <inlineHelpText>The date for which the parent Timecard contains the specified number of hours.</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>