force-app/main/default/objects/pse__Time_Date__c/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <description>Resource Type from the contact record associated with the Time Date record.</description>
    <formula>Text(pse__Timecard__r.pse__Resource__r.Resource_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Resource Type from the contact record associated with the Time Date record.</inlineHelpText>
    <label>Resource Type</label>
    <type>Text</type>
</CustomField>